Fix Quick-create dropdown with large number of items disallows reaching them on overflow

--- a/ui/scss/_navbar.scss
+++ b/ui/scss/_navbar.scss
@@ -63,11 +63,11 @@
   }
 
   .dropdown-menu{
-    padding-top: 0px;
+    padding: 0;
+
 
     .title{
       padding: 5px 20px 5px;
-      margin-bottom: 5px;
       border-bottom: 1px solid #e7e7e7;
       text-align: center;
       text-transform: uppercase;
@@ -89,6 +89,28 @@
         font-size: 15px;
       }
 
+    }
+
+    .quick-create-elements-container {
+      max-height: calc(100vh - 100px);
+      overflow-y: auto;
+      padding: 5px 0;
+
+      li a {
+        display: block;
+        padding: 3px 20px;
+        clear: both;
+        font-weight: normal;
+        line-height: 1.42857;
+        color: #333;
+        white-space: nowrap;
+
+        &:hover {
+          text-decoration: none;
+          color: #262626;
+          background-color: #f5f5f5;
+        }
+      }
     }
 
   }
